--- a/frontend-deployment-az.yaml
+++ b/frontend-deployment-az.yaml
@@ -14,19 +14,7 @@ spec:
     spec:
       containers:
         - name: frontend
-          image: fmregistry123.azurecr.io/frontend:latest
+          # Use placeholder tag; Azure DevOps will replace it
+          image: fmregistry123.azurecr.io/shiveshcfootballmanager:REPLACE_TAG
           ports:
             - containerPort: 3000
----
-apiVersion: v1
-kind: Service
-metadata:
-  name: frontend-service
-spec:
-  type: LoadBalancer
-  selector:
-    app: frontend
-  ports:
-    - protocol: TCP
-      port: 80
-      targetPort: 3000
